# rr

./: CMakeLists.txt  README.md
app/: main.cpp
apps/: CMakeLists.txt  main.cpp
cmake/: FindLIBCURSES.cmake  FindLIBPORTAUDIO.cmake  FindLIBPORTMIDI.cmake
